# anarlog

./: .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  STATUS.md  eslint-plugin-hypr.mjs  pnpm-lock.yaml  speaches-realtime-bug-report.md
.agents/skills/add-plugin/: SKILL.md
.agents/skills/axum-test-transport/: SKILL.md
.agents/skills/migrate-to-sqlite/: SKILL.md
.agents/specs/: seo-content-engine.md
.github/workflows/: cli_ci.yaml  desktop_ci.yaml  fmt.yaml  llm_e2e.yaml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  db.rs  error.rs  lib.rs  main.rs  mcp.rs  output.rs
apps/cli/src/commands/: doctor.rs  meetings.rs  mod.rs
apps/cli/src/snapshots/: anarlog_cli__cli__tests__cli_contract.snap  anarlog_cli__mcp__tests__mcp_contract.snap
apps/desktop/: package.json
apps/web/: netlify.toml  package.json
crates/agent-access/: Cargo.toml
crates/agent-access/src/: lib.rs
crates/api-client/: openapi.gen.json
crates/cloudsync/: Cargo.toml
crates/db-app/: Cargo.toml
crates/supabase-auth/: Cargo.toml
docs/: AGENTS.md  README.md  docs.json  index.mdx  installation.mdx  quickstart.mdx  troubleshooting.mdx
docs/agents/: cli.mdx  mcp.mdx  overview.mdx  skills.mdx
docs/recipes/: meeting-prep.mdx
docs/reference/: cli.mdx  errors.mdx  mcp.mdx
plugins/analytics/: build.rs
plugins/db/: Cargo.toml  build.rs
plugins/dock/: Cargo.toml
plugins/fs-sync/: build.rs
plugins/transcription/: build.rs
plugins/tray/: build.rs
plugins/windows/: build.rs
skills/anarlog/: SKILL.md
supabase/migrations/: 20260712000002_auth_hook_fix_payment_method_claim.sql
supabase/tests/: 003-auth-custom-access-token-hook.sql
(+875 files in other folders)
