[package]
name = "agent-access"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-db-app = { workspace = true }
hypr-tiptap = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive", "serde_json"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
hypr-db-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
